--- a/WebContent/theme/1/css/front/styles.css
+++ b/WebContent/theme/1/css/front/styles.css
@@ -60,6 +60,9 @@ a[form]:active {color: #970102}
 	width: 40px;
 	height: 30px;
 }
+/* #tdNoborder {
+	border: none或 0px;
+} */
 .footer {
 	font-size: 11pt;
 	color: #970102;
